Update: - Added "Delete all Data" butoon to new App Bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,24 @@
 <resources>
     <string name="app_name">Phone DB</string>
-    <string name="manufacturer_tv">"Manufacturer: "</string>
-    <string name="model_tv">Model</string>
-    <string name="web_site_bt">WebStrona</string>
-    <string name="cancel_bt">Cancel</string>
-    <string name="save_bt">Save</string>
-    <string name="android_version_tv">AndroidVersion</string>
-    <string name="webpage_tv">WebPage</string>
-    <string name="manufacturer_et_err">Proszę wprowadzić producenta!</string>
-    <string name="android_version_et_err">Proszę wprowadzić wersję systemu Android!</string>
-    <string name="model_et_err">Proszę wprowadzić model!</string>
-    <string name="webpage_et_err">Proszę wprowadzić adres strony internetowej!</string>
-    <string name="str_share_twitter" />
-    <string name="str_share_facebook" />
+    <!--    TextView names      -->
+    <string name="manufacturerTextView">Manufacturer:</string>
+    <string name="modelText">Model:</string>
+    <string name="androidTextView">Android:</string>
+    <string name="url">URL:</string>
+    <!--    Hints      -->
+    <string name="manufacturerHint">Enter a manufacturer</string>
+    <string name="modelHint">Enter model</string>
+    <string name="androidHint">Enter an Android version</string>
+    <string name="urlHint">Enter URL</string>
+    <!--    Button names      -->
+    <string name="urlButton">Go to URL</string>
+    <string name="cancelButton">Cancel</string>
+    <string name="saveButton">Save</string>
+    <!--    Error messages      -->
+    <string name="manufacturerErr">Please enter the manufacturer!</string>
+    <string name="androidVersionErr">Please enter the Android version!</string>
+    <string name="modelErr">Please enter the model!</string>
+    <string name="urlErr">Please enter URL address!</string>
+    <string name="delete_all">Delete All</string>
+    <string name="todo">TODO</string>
 </resources>
